Fixes images truncating too much

--- a/Client/wwwroot/assets/css/style.css
+++ b/Client/wwwroot/assets/css/style.css
@@ -3684,7 +3684,7 @@ body {
 #hexGrid {
   display: flex;
   flex-wrap: wrap;
-  width: 90%;
+  /* width: 90%; */
   margin: 0 auto;
   overflow: hidden;
   font-family: 'Raleway', sans-serif;
@@ -4305,3 +4305,16 @@ h1#affordable:fullscreen {
     max-width: 20em;
 
 }
+
+/* h1#affordable:focus-visible, *:focus-visible  {
+    border: 0 !important;
+  } */
+
+  @supports not selector(:focus-visible) {
+    h1#affordable.with-fallback:focus {
+      /* Fallback for browsers without :focus-visible support */
+      border: 0;
+      outline: 3px solid deepskyblue;
+      outline-offset: 3px;
+    }
+  }
